<?xml version="1.0" encoding="utf-8"?>
<com.wacode.yuki.lowaccuracymappingsecond.UI.Map.HistoryDialog.HistoryDialogLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="6dp"
    android:layout_marginTop="@dimen/view_map_dialog_marginTop"
    android:layout_marginLeft="@dimen/view_map_dialog_marginLeft"
    android:layout_marginRight="@dimen/view_map_dialog_marginLeft"
    android:id="@+id/mainLayout"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorGreen">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:text="@string/map_dialog_title"
            android:textSize="@dimen/textSize_normal"
            android:padding="10dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_dialog_start"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="@dimen/view_map_dialog_date_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/view_map_dialog_date_margin"
        android:id="@+id/startDateLayout">
        <TextView
            android:id="@+id/textView_startYear"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_map_dialog_text_padding"
            android:background="@drawable/allborder" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_dialog_year"/>
        <TextView
            android:id="@+id/textView_startMonth"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_map_dialog_text_padding"
            android:background="@drawable/allborder"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_dialog_month" />
        <TextView
            android:id="@+id/textView_startDay"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_map_dialog_text_padding"
            android:background="@drawable/allborder"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_dialog_date"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/down_arrow"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_dialog_end"
        android:textColor="@color/colorBlack"
        android:layout_marginLeft="@dimen/view_map_dialog_date_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/view_map_dialog_date_margin"
        android:id="@+id/endDateLayout">
        <TextView
            android:id="@+id/textView_endYear"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_map_dialog_text_padding"
            android:background="@drawable/allborder" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_dialog_year"/>
        <TextView
            android:id="@+id/textView_endMonth"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_map_dialog_text_padding"
            android:background="@drawable/allborder"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_dialog_month" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/textView_endDay"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_map_dialog_text_padding"
            android:background="@drawable/allborder"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_dialog_date"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_dialog_normal"
            android:id="@+id/button_normal"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_dialog_button"
            android:id="@+id/button_set"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_dialog_cancel"
            android:id="@+id/button_cancel"/>
    </LinearLayout>

</com.wacode.yuki.lowaccuracymappingsecond.UI.Map.HistoryDialog.HistoryDialogLayout>